feature: criar pesquisa

--- a/src/Backend/ServicoProcessamento.Api/ServicoProcessamento.Api.csproj
+++ b/src/Backend/ServicoProcessamento.Api/ServicoProcessamento.Api.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Shared\ServicoProcessamento.Communication\ServicoProcessamento.Communication.csproj" />
       <ProjectReference Include="..\ServicoProcessamento.Application\ServicoProcessamento.Application.csproj" />
       <ProjectReference Include="..\ServicoProcessamento.Infrastructure\ServicoProcessamento.Infrastructure.csproj" />
     </ItemGroup>
