--- a/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
+++ b/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
@@ -8,6 +8,6 @@
   "ConnectionStrings": {
     "RabbitMQ": "amqp://guest:guest@localhost:5672",
     "AzureServiceBus": "sb://nspesquisaPublica.servicebus.windows.net",
-    "MongoDB": "mongodb://root:admin@localhost:27017"
+    "MongoDB": "mongodb+srv://silvio:admin@pesquisapublica.voxeu.mongodb.net/?retryWrites=true&w=majority&appName=PesquisaPublica"
   }
 }
