--- a/src/Backend/ServicoProcessamento.Application/ServicoProcessamento.Application.csproj
+++ b/src/Backend/ServicoProcessamento.Application/ServicoProcessamento.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Shared\ServicoProcessamento.Communication\ServicoProcessamento.Communication.csproj" />
       <ProjectReference Include="..\ServicoProcessamento.Domain\ServicoProcessamento.Domain.csproj" />
     </ItemGroup>
 
