--- a/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
+++ b/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
@@ -8,6 +8,8 @@
   "ConnectionStrings": {
     "RabbitMQ": "amqp://guest:guest@localhost:5672",
     "AzureServiceBus": "sb://nspesquisaPublica.servicebus.windows.net",
-    "MongoDB": "mongodb+srv://silvio:admin@pesquisapublica.voxeu.mongodb.net/?retryWrites=true&w=majority&appName=PesquisaPublica"
+    "MongoDbCluster": "mongodb+srv://silvio:admin@pesquisapublica.voxeu.mongodb.net/?retryWrites=true&w=majority&appName=PesquisaPublica",
+    "MongoDbLocal": "mongodb://localhost:27017/"
   }
 }
+
