--- a/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
+++ b/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoLocal": true,
   "ConnectionStrings": {
     "RabbitMQ": "amqp://guest:guest@localhost:5672",
     "AzureServiceBus": "sb://nspesquisaPublica.servicebus.windows.net",
