refactor: refatorando classes das camadas

--- a/src/Backend/ServicoProcessamento.Application/ServicoProcessamento.Application.csproj
+++ b/src/Backend/ServicoProcessamento.Application/ServicoProcessamento.Application.csproj
@@ -18,7 +18,13 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.11.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+      <PackageReference Include="OneOf" Version="3.0.271" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Errors\" />
     </ItemGroup>
 
 </Project>
