--- a/src/Backend/ServicoProcessamento.Infrastructure/ServicoProcessamento.Infrastructure.csproj
+++ b/src/Backend/ServicoProcessamento.Infrastructure/ServicoProcessamento.Infrastructure.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Shared\ServicoProcessamento.Communication\ServicoProcessamento.Communication.csproj" />
       <ProjectReference Include="..\ServicoProcessamento.Domain\ServicoProcessamento.Domain.csproj" />
     </ItemGroup>
 
