--- a/src/Backend/ServicoProcessamento.Domain/ServicoProcessamento.Domain.csproj
+++ b/src/Backend/ServicoProcessamento.Domain/ServicoProcessamento.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Shared\ServicoProcessamento.Communication\ServicoProcessamento.Communication.csproj" />
+    </ItemGroup>
+
 </Project>
