--- a/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
+++ b/src/Backend/ServicoProcessamento.Api/appsettings.Development.json
@@ -5,12 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MongoLocal": true,
-  "ConnectionStrings": {
-    "RabbitMQ": "amqp://guest:guest@localhost:5672",
-    "AzureServiceBus": "sb://nspesquisaPublica.servicebus.windows.net",
-    "MongoDbCluster": "mongodb+srv://silvio:admin@pesquisapublica.voxeu.mongodb.net/?retryWrites=true&w=majority&appName=PesquisaPublica",
-    "MongoDbLocal": "mongodb://localhost:27017/"
-  }
+  "MongoLocal": true
 }
-
