--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -65,7 +65,9 @@ jobs:
 #            /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
 
       - name: 🏗️ Building 
-        run: dotnet build --no-incremental
+        run: |
+          dotnet restore
+          dotnet build --no-incremental
 
       - name: 🔚 End SonarCloud Scan
         run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
