--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -53,7 +53,7 @@ jobs:
           dotnet nuget add source \
             --name GitHubPackages \
             --username ${{ github.actor }} \
-            --password ${{ secrets.GITHUB_TOKEN }} \
+            --password ${{ secrets.PROCESSAMENTO_TOKEN }} \
             --store-password-in-clear-text \
             https://nuget.pkg.github.com/silviobassi/index.json
             
