refactor: ♻️ mesclando a arquitetura com vertical slice

--- a/src/Backend/ServicoProcessamento.Infrastructure/ServicoProcessamento.Infrastructure.csproj
+++ b/src/Backend/ServicoProcessamento.Infrastructure/ServicoProcessamento.Infrastructure.csproj
@@ -15,7 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Shared\ServicoProcessamento.Communication\ServicoProcessamento.Communication.csproj" />
-      <ProjectReference Include="..\ServicoProcessamento.Domain\ServicoProcessamento.Domain.csproj" />
+      <ProjectReference Include="..\ServicoProcessamento.Feature\ServicoProcessamento.Feature.csproj" />
     </ItemGroup>
 
 </Project>
