--- a/src/Backend/ServicoProcessamento.Api/ServicoProcessamento.Api.csproj
+++ b/src/Backend/ServicoProcessamento.Api/ServicoProcessamento.Api.csproj
@@ -14,7 +14,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\Shared\ServicoProcessamento.Communication\ServicoProcessamento.Communication.csproj"/>
-        <ProjectReference Include="..\ServicoProcessamento.Pesquisa\ServicoProcessamento.Pesquisa.csproj" />
+        <ProjectReference Include="..\ServicoProcessamento.Feature\ServicoProcessamento.Feature.csproj" />
         <ProjectReference Include="..\ServicoProcessamento.Infrastructure\ServicoProcessamento.Infrastructure.csproj"/>
     </ItemGroup>
 
