--- a/src/Backend/ServicoProcessamento.Infrastructure/ServicoProcessamento.Infrastructure.csproj
+++ b/src/Backend/ServicoProcessamento.Infrastructure/ServicoProcessamento.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.3.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
+      <PackageReference Include="Mongo2Go" Version="4.1.0" />
       <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
       <PackageReference Include="PesquisaPublica.Shared" Version="1.0.14" />
     </ItemGroup>
@@ -16,6 +17,12 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Shared\ServicoProcessamento.Communication\ServicoProcessamento.Communication.csproj" />
       <ProjectReference Include="..\ServicoProcessamento.Feature\ServicoProcessamento.Feature.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore">
+        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.1\Microsoft.AspNetCore.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
