--- a/tests/CommonTestUtilities/CommonTestUtilities.csproj
+++ b/tests/CommonTestUtilities/CommonTestUtilities.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Moq" Version="4.20.72" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Backend\ServicoProcessamento.Domain\ServicoProcessamento.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
