settings: adicionando referências

--- a/tests/UseCases.Test/UseCases.Test.csproj
+++ b/tests/UseCases.Test/UseCases.Test.csproj
@@ -19,4 +19,9 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Backend\ServicoProcessamento.Feature\ServicoProcessamento.Feature.csproj" />
+      <ProjectReference Include="..\CommonTestUtilities\CommonTestUtilities.csproj" />
+    </ItemGroup>
+
 </Project>
